<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtInput"
        style="@style/Widget.MaterialComponents.TextView"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/black"
        android:ems="10"
        android:gravity="end|center_vertical"
        android:maxLength="12"
        android:textColor="@color/white"
        android:textSize="55sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput"
        app:layout_goneMarginTop="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center">

            <Button
                android:id="@+id/btnHistList"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onHistList"
                android:text="@string/r"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnHist"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onHist"
                android:text="@string/h"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/back"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDel"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnClear"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onClear"
                android:text="@string/clr"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center">

            <Button
                android:id="@+id/btnSeven"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnEight"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnNine"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDivide"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onOperator"
                android:text="@string/div"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center">

            <Button
                android:id="@+id/btnFour"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnFive"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSix"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnMultiply"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onOperator"
                android:text="@string/mul"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="center">

            <Button
                android:id="@+id/btnOne"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnTwo"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnThree"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSubtract"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onOperator"
                android:text="@string/sub"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="fill"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnDecimal"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDecimalPoint"
                android:text="@string/dec"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnZero"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onDigit"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnEqual"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onEqual"
                android:text="@string/equals"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="onOperator"
                android:text="@string/add"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>